# pylambdac

./: .gitignore  Pipfile  README.md  all_tests.py  bib.bib  draw.py  grammar.lark  lterm.py  main.tex  olcrun  ordinals.md  parse.py  paths.py  pyproject.toml  rewrite_test  run_tests  tdata.py  test_eager.py  test_freevar.py  test_parse.py  test_reduce.py  test_size.py  test_varsubst.py  test_y.py  trydraw  trylambda
demofiles/: draw.olc  f_e0.olc  f_fs.olc  f_fs.olc.md  f_ww.olc  fgh.olc  graham.olc  slow.olc  smallernums.olc  test1.olc
experimental/: uparrow.py
experimental/latex/: bib.bib
latex/: main.tex
pylambdac/: draw.py  lterm.py  markcode.py  parse.py  paths.py  processor.py
testdata/: test_parse.json  test_reduce.json  test_y.json
testfiles/: test1.olc
tests/: all_tests.py  rewrite_test  run_tests  tdata.py  test_eager.py  test_freevar.py  test_parse.py  test_pylambdac.py  test_reduce.py  test_size.py  test_varsubst.py  test_y.py
tests/testdata/: test_eager.json  test_reduce.json  test_size.json  test_y.json
